# edrota4-axum

./: COOKIE_AUTH.md  Cargo.toml  INTEGRATION.md  MUTATION-MIGRATION-STATUS.md  README.md  TEST_AUTH.md  TEST_COOKIE_AUTH.md  openapi.json
.agent/: API-RESPONSE-SHAPES.md  COMMON_PITFALLS.md  DATABASE-SCHEMA.md  IMPLEMENTATION-PLAN.md
fixtures/: audit_logs.json  comments.json  diary_entries.json  job_plans.json  roles.json  shift_templates.json  shifts.json  users.json
sql/: 001_add_indexes.sql
src/: config.rs  error.rs  main.rs  openapi.rs  startup.rs
src/auth/: claims.rs  clerk_api.rs  clerk_jwks.rs  jwt.rs  mod.rs  pin_token.rs
src/db/: pool.rs
src/extractors/: auth.rs  mod.rs  permissions.rs
src/handlers/: audit_handler.rs  auth_handler.rs  comments_handler.rs  debug.rs  diary_handler.rs  health.rs  job_plans_handler.rs  marketplace_handler.rs  metrics.rs  mod.rs  references_handler.rs  roles_handler.rs  shifts_handler.rs  templates_handler.rs  user_roles_handler.rs  users_handler.rs  workplaces_handler.rs
src/middleware/: metrics.rs  mod.rs  request_id.rs  secret_auth.rs
src/models/: audit.rs  audit.rs.bak  comment.rs  comment.rs.bak  diary.rs  diary.rs.bak  diary_input.rs  diary_input.rs.bak  job_plan.rs  job_plan.rs.bak  job_plan_input.rs  job_plan_input.rs.bak  marketplace.rs  marketplace.rs.bak  marketplace_input.rs  marketplace_input.rs.bak  mod.rs  role.rs  role_input.rs  role_input.rs.bak  shift.rs  shift.rs.bak  shift_input.rs  shift_input.rs.bak  template_input.rs  template_input.rs.bak  time_off.rs  time_off.rs.bak  user.rs  user_input.rs  (+3 more)
